add basic layout

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ant-design/icons": "^5.1.0",
     "@ng-web-apis/universal": "^2.1.0",
     "@nguniversal/express-engine": "~15.1.0",
+    "google-one-tap": "^1.0.6",
     "isbot": "^3.6.10",
     "morgan": "^1.10.0",
     "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.5.0",
+    "slugify": "^1.6.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -42,6 +44,7 @@
     "@nrwl/workspace": "15.9.4",
     "@schematics/angular": "~15.0.3",
     "@types/compression": "^1.7.2",
+    "@types/google-one-tap": "^1.2.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
