--- a/project.json
+++ b/project.json
@@ -29,7 +29,10 @@
           "src/styles.css",
           "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
         ],
-        "scripts": []
+        "scripts": [],
+        "allowedCommonJsDependencies": [
+          "slugify"
+        ]
       },
       "configurations": {
         "production": {
