--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "rxjs": "~7.5.0",
     "slugify": "^1.6.6",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "ngx-quill": "^20.0.0",
+    "ngx-quill-upload": "^2.0.0",
+    "quill": "^1.3.7",
+    "quill-blot-formatter": "^1.0.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
@@ -46,6 +50,8 @@
     "@schematics/angular": "~15.0.3",
     "@types/compression": "^1.7.2",
     "@types/google-one-tap": "^1.2.2",
+    "@types/cheerio": "^0.22.31",
+    "cheerio": "^1.0.0-rc.12",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -54,6 +60,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "nx": "15.9.4",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "@types/quill": "^1.3.10"
   }
 }
