--- a/project.json
+++ b/project.json
@@ -27,11 +27,19 @@
         ],
         "styles": [
           "src/styles.css",
-          "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+          "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+          "./node_modules/quill/dist/quill.core.css",
+          "./node_modules/quill/dist/quill.bubble.css",
+          "./node_modules/quill/dist/quill.snow.css"
         ],
-        "scripts": [],
+        "scripts": [
+          "./node_modules/quill/dist/quill.min.js"
+        ],
         "allowedCommonJsDependencies": [
-          "slugify"
+          "slugify",
+          "boolbase",
+          "quill",
+          "quill-blot-formatter"
         ]
       },
       "configurations": {
