--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
     "start": "node dist/apps/ggj-aff-fe/server/main.js",
-    "build": "nx build && nx run ggj-aff-fe:server",
+    "build": "nx run ggj-aff-fe:server",
     "postbuild": "node build-process/post-build.js"
   },
   "private": true,
