--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "nx test",
     "start": "node dist/apps/ggj-aff-fe/server/main.js",
     "build": "nx run ggj-aff-fe:server",
-    "postbuild": "node build-process/post-build.js"
+    "postbuild": "node build-process/post-build.js && node build-process/sitemap-generate.js"
   },
   "private": true,
   "dependencies": {
@@ -28,14 +28,16 @@
     "isbot": "^3.6.10",
     "morgan": "^1.10.0",
     "ng-zorro-antd": "^15.1.0",
+    "ngx-quill": "^20.0.0",
+    "ngx-quill-upload": "^2.0.0",
+    "node-fetch": "^2.6.9",
+    "quill": "^1.3.7",
+    "quill-blot-formatter": "^1.0.5",
     "rxjs": "~7.5.0",
     "slugify": "^1.6.6",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "ngx-quill": "^20.0.0",
-    "ngx-quill-upload": "^2.0.0",
-    "quill": "^1.3.7",
-    "quill-blot-formatter": "^1.0.5"
+    "xml": "^1.0.1",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
@@ -48,11 +50,12 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.9.4",
     "@schematics/angular": "~15.0.3",
+    "@types/cheerio": "^0.22.31",
     "@types/compression": "^1.7.2",
     "@types/google-one-tap": "^1.2.2",
-    "@types/cheerio": "^0.22.31",
-    "cheerio": "^1.0.0-rc.12",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "^1.3.10",
+    "cheerio": "^1.0.0-rc.12",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -60,7 +63,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "nx": "15.9.4",
-    "typescript": "~4.8.2",
-    "@types/quill": "^1.3.10"
+    "typescript": "~4.8.2"
   }
 }
