--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "slugify": "^1.6.6",
     "tslib": "^2.3.0",
     "xml": "^1.0.1",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "purgecss": "^5.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
